libview: Add ev_view_find_started to conect find update signal to the view

The method ev_view_find_changed is not introspectable
because use a pointer to a array as parameter.
As proposed in bug #682875 [1], this patch add a method ev_view_find_started

Signed-off-by: Gonzalo Odiard <gonzalo@laptop.org>

https://bugzilla.gnome.org/show_bug.cgi?id=682875#c8