libview/ev-view.h
@@ -69,6 +69,8 @@ gboolean        ev_view_can_zoom_out      (EvView         *view);
 void		ev_view_zoom_out	  (EvView         *view);
 
 /* Find */
+void            ev_view_find_started              (EvView         *view,
+						   EvJobFind      *job);
 void            ev_view_find_next                 (EvView         *view);
 void            ev_view_find_previous             (EvView         *view);
 void            ev_view_find_search_changed       (EvView         *view);
